--- a/cLand/package.json
+++ b/cLand/package.json
@@ -37,6 +37,7 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.18.2",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^5.0.0",
     "jest": "^24.7.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
