--- a/cLand/package.json
+++ b/cLand/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "youtube-bootstrap",
+  "name": "cland",
   "version": "0.0.1",
-  "description": "Initial project template for RSS YouTube task",
+  "description": "Responsive markup",
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
@@ -23,14 +23,17 @@
   "homepage": "https://github.com/deminiro/cLand#readme",
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^4.2.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.2.0"
+    "sass-loader": "^7.2.0",
+    "url-loader": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^2.1.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -41,7 +44,7 @@
     "jest": "^24.7.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.3.1"
   }
 }
